# soft_throw

./: CMakeLists.txt  README.md  env_spoon_throw_core.py  env_spoon_throw_core_legacy.py  eval_residual_ppo_app.py  franka_panda_limits_with_velocity_acceleration.txt  joint_traces.csv  package.xml  run_min_throw_sim.py  train_residual_ppo_app.py
core/: ik_poly5_core.py  kinematics_pin.py  pinocchio_compat.py  rewards.py  targets.py  throw_params.py  tube_accel_planner.py  tube_baseline.py
launch/: panda_traj.launch  run_min_throw_real.launch
minimal/: controller_min.py
outputs/: joint_traces.csv
real/: eval_residual_ppo_real.py  robot_io.py  run_min_throw_real.py
sim/: env_isaac_throw.py  isaac_robot_io.py  isaac_scene.py  plot_joint_traces.py  run_min_throw_sim.py
