<?xml version="1.0"?>
<package format="2">
  <name>soft_throw</name>
  <version>0.0.1</version>
  <description>Send joint trajectory waypoints to Franka Panda</description>

  <maintainer email="you@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>

</package>
